--- a/articles/c1e2ed61661f7a.md
+++ b/articles/c1e2ed61661f7a.md
@@ -1,7 +1,35 @@
 ---
 title: "約2ヶ月GitHubに学習した内容をアウトプットした結果得られたこと"
-emoji: "🎃"
-type: "tech" # tech: 技術記事 / idea: アイデア
-topics: []
+emoji: "arm"
+type: "idea" # tech: 技術記事 / idea: アイデア
+topics: [ブログ]
 published: false
 ---
+
+## モチベーション
+[ソフトウェア エンジニアとしての 姿勢と心構え](https://speakerdeck.com/recruitengineers/sohutouea-enziniatositeno-zi-shi-toxin-gou-e?slide=31)を拝見しアウトプットを継続してやってみようとチャレンジ
+https://speakerdeck.com/recruitengineers/sohutouea-enziniatositeno-zi-shi-toxin-gou-e?slide=31
+
+## やったこと
+- [hackerank](https://www.hackerrank.com/)で問題を解いて、書いたコードをGitHubにコミット
+- zennの記事を執筆（下書き中のものが多いのでそのうち公開）。GitHub連携することでついでに草はやせるので有用です
+- 毎日コードを書いたりテックブログを読んだり、技術書を読んだりしてインプットとアウトプットに取り組んだ
+
+## 結果
+![精進した結果](https://storage.googleapis.com/zenn-user-upload/e2ae9659c15e-20241102.png)
+2ヶ月GitHubにアウトプットをコミットし続けました。3日コミットできなかったがほぼ毎日精進しました
+
+## 得られたこと
+- 学習のモチベーションを保てた
+    - GitHubに草が増えることで達成感を得られた
+- 学習の習慣化ができた
+    - 徐々に何かしらやらないと気持ち悪い状態（=ルーティン）になったことによってより学習することの敷居が下がりつつある
+
+## 今後やりたいこと
+- やったことをオープンにする
+    - プライベートリポジトリにコミットしてたので人様に見せても大丈夫なものを公開できるようにしたいですね
+- ポートフォリオを作成
+    - 学習しているうちに個人開発で何か物作りたいモチベーションが高まってきたので年内に何か簡単なものを作ってみたいです
+
+## 結論
+アウトプットする習慣はエンジニアとしての成長にも繋がるのでオススメです。
