--- a/articles/db7fb5e10075ad.md
+++ b/articles/db7fb5e10075ad.md
@@ -2,7 +2,7 @@
 title: "日本の祝日を取得できるAPIをSupabaseを使って作ってみた"
 emoji: "💪"
 type: "tech" # tech: 技術記事 / idea: アイデア
-topics: [Supabase]
+topics: [Supabase, API]
 published: true
 ---
 
