Supabase Edge Functionsで使っているJavaScriptのランタイムについて追記

--- a/articles/db7fb5e10075ad.md
+++ b/articles/db7fb5e10075ad.md
@@ -144,6 +144,9 @@ https://supabase.com/docs
 ローカルではdockerを裏で起動しており管理画面もローカル環境上で操作できて便利でした。  
 https://supabase.com/docs/guides/local-development
 
+JavaScriptのランタイムとして[Deno](https://deno.com/)を使っていました。
+Denoを触るのは初めてでしたがnpm使わないのは新鮮でした。
+
 ## DBの管理について
 今回は時短とテーブル1個のため管理画面からサクッと作りました。  
 データの投入を管理画面からCSVインポートでできるので便利すぎます。  
