デプロイについて追加

--- a/articles/db7fb5e10075ad.md
+++ b/articles/db7fb5e10075ad.md
@@ -156,6 +156,11 @@ https://supabase.com/docs/guides/database/overview
 Supabase CLIのコマンドで一発でできます。お手軽すぎる。  
 https://supabase.com/docs/guides/functions/deploy
 
+【追記】
+GitHub Actionsの説明ページがあったのでそちらを参考にデプロイを自動化しました。
+GitHub Actions便利でいいですね。
+https://supabase.com/docs/guides/functions/examples/github-actions
+
 ## 実際触ってみて
 
 機能面の観点で言うと思ったより簡単にできました。  
