追記と補記

--- a/articles/081d6197fd8ea4.md
+++ b/articles/081d6197fd8ea4.md
@@ -41,10 +41,16 @@ Reactでどんな画面やコンポーネントを作ったのかを書くと質
 また、たまに資格を年内取得予定と書く人もいたが予定は未定でしかない。一種のアピールというか書かないよりはマシと思って書いているのかもしれないが結果が出ていない以上、評価の要素にはつながらないと個人的には思う。
 自分がやるとしたら例えば実際にポートフォリオを作ってAWS触ったのでついでにAWSのxxという資格を取るつもりですと話すに留めると思う。
 
+## 経歴書で思うこと（経験年数）
+たまに明らかに経歴や経験年数盛りすぎではと思うものもいくつかみてきた。
+一緒に働いているわけではないので真実かどうかは知りようがないが経験年数に相応しい経験か確かめるために、
+質問レベルが変わるだけである。
+質問に的確に回答いただけるとなるほどとなるが、たまに先輩の作業を見ながらやってたのでや勉強不足でと経験の長さと深さが一致していない場合があるので経験年数でアピールするならそれ相応の備えをしたほうが良いと思う。
+
 ### 自己紹介で思うこと
 今まで経験した案件を1から100まで説明いただく機会が幾度とあったが要約して説明する力もコミュニケーション能力の一つとして求められる。
 自分も数多くの案件を経験してきたので1から説明したら自己紹介で時間が終わってしまう。
-したがって案件に関係ある部分を中心に話、関連性の薄い案件については質問があれば別途答えるスタイルをとっている。
+したがって案件に関係ある部分を中心に話して関連性の薄い案件については質問があれば別途答えるスタイルをとっている。
 
 ### 質問の意図について
 自分は質問する時にこういう意図で説明していますと補記することが多い。
@@ -68,7 +74,7 @@ Reactでどんな画面やコンポーネントを作ったのかを書くと質
 ### 質問される時に思うこと
 最近質問されることが多いのにリモートですかと残業ありますかと働きやすさ的なことが多い。
 働きやすさは大事だと思うし、確認は大事だと思うけど技術的な部分の質問が少ないのはちょっと寂しいと思う。
-こういうことやれますかとこれどうやってやっていますかと質問があると嬉しい。
+こういうことやれますかとこれどうやってやっていますかなどの質問があると嬉しい。
 よりよい質問をいただけるようになるよう精進したい。
 
 ### 書いてみて
