--- a/articles/081d6197fd8ea4.md
+++ b/articles/081d6197fd8ea4.md
@@ -49,6 +49,7 @@ Reactでどんな画面やコンポーネントを作ったのかを書くと質
 
 ### 自己紹介で思うこと
 今まで経験した案件を1から100まで説明いただく機会が幾度とあったが要約して説明する力もコミュニケーション能力の一つとして求められる。
+また事前に資料を読むため(もしかしたら資料を読まない人間にしか当たったことがない可能性もあるかもしれない)、要点をまとめて話していただくだけで十分である。
 自分も数多くの案件を経験してきたので1から説明したら自己紹介で時間が終わってしまう。
 したがって案件に関係ある部分を中心に話して関連性の薄い案件については質問があれば別途答えるスタイルをとっている。
 
