タイトル修正

--- a/articles/e86db592ec9e94.md
+++ b/articles/e86db592ec9e94.md
@@ -1,6 +1,6 @@
 ---
-title: "【小ネタ】WEBページで特定の箇所のリンクを取得する方法"
-emoji: "🕌"
+title: "【小ネタ】ChromeでWEBページで特定の箇所のリンクを取得する方法"
+emoji: "😄"
 type: "tech" # tech: 技術記事 / idea: アイデア
 topics: [Chrome]
 published: true
