--- a/articles/081d6197fd8ea4.md
+++ b/articles/081d6197fd8ea4.md
@@ -78,6 +78,10 @@ Reactでどんな画面やコンポーネントを作ったのかを書くと質
 こういうことやれますかとこれどうやってやっていますかなどの質問があると嬉しい。
 よりよい質問をいただけるようになるよう精進したい。
 
+### その他
+フィーリングも大事だと思う。会話が噛み合わない時や会話のテンポが合わない時など違和感がある場合は経験上お見送りにした方が良い場合が多い。
+
+
 ### 書いてみて
 頭に思っていることを書き出したら思ったより量が多くなったが、
 書き出すことでどこにひっか勝っていたか思考を可視化できて頭の整理になった。
